# VulkanTutorial

./: CMakeLists.txt  README.md  compile_flags.txt  flake.nix
assets/: compile.sh
assets/shaders/: shader.frag  shader.frag.spv
assets/shaders/chapter4/: shader.vert
assets/shaders/chapter5/: shader.vert
assets/shaders/chapter6/: shader.vert  shader.vert.spv
assets/shaders/chapter7/: shader.frag  shader.vert  shader.vert.spv
assets/shaders/chapter8/: shader.vert  shader.vert.spv
chapter10/: CMakeLists.txt
chapter10/include/: main.hpp
chapter10/src/: main.cpp
chapter11/: CMakeLists.txt
chapter11/include/: main.hpp
chapter11/src/: main.cpp
chapter4/: CMakeLists.txt
chapter4/include/: main.hpp
chapter4/src/: main.cpp
chapter5/: CMakeLists.txt
chapter5/include/: main.hpp
chapter5/src/: main.cpp
chapter6/: CMakeLists.txt
chapter6/include/: main.hpp
chapter6/src/: main.cpp
chapter7/: CMakeLists.txt
chapter7/include/: main.hpp
chapter7/src/: main.cpp
chapter8/: CMakeLists.txt
chapter8/include/: main.hpp
chapter8/src/: main.cpp
chapter9/: CMakeLists.txt
chapter9/include/: main.hpp
chapter9/src/: main.cpp
cmake/: deps.cmake  options.cmake  sdl3.cmake
common/: CMakeLists.txt
common/include/: common.hpp  util.hpp
common/src/: common.cpp  util.cpp
